--- a/appspec.yml
+++ b/appspec.yml
@@ -1,37 +1,18 @@
 version: 0.0
 os: linux
-files: 
+files:
   - source: /
-    destination: /home/ubuntu/aws_code_pipeline
-permissions:
-  - object: /home/ubuntu/aws_code_pipeline
-    owner: ubuntu
-    group: ubuntu
+    destination: /var/www/myapp
 hooks:
   BeforeInstall:
-      - location: scripts/clean_instance.sh
-        timeout: 300
-        runas: ubuntu
+    - location: scripts/stop_server.sh
+      timeout: 300
   AfterInstall:
-      - location: scripts/instance_os_dependencies.sh
-        timeout: 300
-        runas: ubuntu
-      - location: scripts/python_dependencies.sh
-        timeout: 300
-        runas: ubuntu
-      - location: scripts/gunicorn.sh
-        timeout: 300
-        runas: ubuntu
-      - location: scripts/nginx.sh
-        timeout: 300
-        runas: ubuntu
-  ApplicationStop:
-      - location: scripts/stop_app.sh
-        timeout: 300
-        runas: ubuntu
+    - location: scripts/install_dependencies.sh
+      timeout: 300
   ApplicationStart:
-      - location: scripts/start_app.sh
-        timeout: 300
-        runas: ubuntu
-  
-  
+    - location: scripts/start_server.sh
+      timeout: 300
+  ApplicationStop:
+    - location: scripts/stop_server.sh
+      timeout: 300
