--- a/appspec.yml
+++ b/appspec.yml
@@ -5,33 +5,33 @@ files:
     destination: /home/ubuntu/aws_code_pipeline
 permissions:
   - object: /home/ubuntu/aws_code_pipeline
-    owner: root
-    group: root
+    owner: ubuntu
+    group: ubuntu
 hooks:
   BeforeInstall:
       - location: scripts/clean_instance.sh
         timeout: 300
-        runas: root
+        runas: ubuntu
   AfterInstall:
       - location: scripts/instance_os_dependencies.sh
         timeout: 300
-        runas: root
+        runas: ubuntu
       - location: scripts/python_dependencies.sh
         timeout: 300
-        runas: root
+        runas: ubuntu
       - location: scripts/gunicorn.sh
         timeout: 300
-        runas: root
+        runas: ubuntu
       - location: scripts/nginx.sh
         timeout: 300
-        runas: root
+        runas: ubuntu
   ApplicationStop:
       - location: scripts/stop_app.sh
         timeout: 300
-        runas: root
+        runas: ubuntu
   ApplicationStart:
       - location: scripts/start_app.sh
         timeout: 300
-        runas: root
+        runas: ubuntu
   
   
